add command, order app
